添加了刪除博客

--- a/views/write_atrticle.gohtml
+++ b/views/write_atrticle.gohtml
@@ -15,16 +15,24 @@
 <div id="main">
     <form id="write-art-form" method="post">
         <div>标题</div>
-        <input type="text" placeholder="请输入标题" name="title" >
+        <label>
+            <input type="text" placeholder="请输入标题" name="title" >
+        </label>
         <div>作者</div>
-        <input type="text" placeholder="请输入作者" name="author" >
+        <label>
+            <input type="text" placeholder="请输入作者" name="author" >
+        </label>
         <div>标签</div>
-        <input type="text" placeholder="请输入标签" name="tags" >
+        <label>
+            <input type="text" placeholder="请输入标签" name="tags" >
+        </label>
         <div>简介</div>
-        <textarea placeholder="请输入简介" name="short"></textarea>
+        <label>
+            <textarea placeholder="请输入简介" name="short"></textarea>
+        </label>
         <div>内容</div>
-        <textarea id="content" placeholder="请输入内容" name="content"></textarea>
-        <input id="write-article-id" hidden name="id" >
+        <label for="content"></label><textarea id="content" placeholder="请输入内容" name="content"></textarea>
+        <label for="write-article-id"></label><input id="write-article-id" hidden name="id" >
         <br>
         <button type="button" onclick="history.back()">返回</button>
         <button type="submit" id="write-art-submit">提交</button>
